<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_test_time"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/et_set_test_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="-"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textSize="16sp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" s"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_interval"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_test_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1000"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ms"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smile_test_count"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_smile_test_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" times"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_test_count"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_scan_test_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" times"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_test_time"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_already_test_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" s"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_state_text"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_network_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iot_state_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_iot_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_test"
        android:textSize="24sp"
        android:padding="16dp"/>
</LinearLayout>
